--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,11 +1,12 @@
+
+
 body, .blank{
 	background-color: #ececec;
 }
 
-
 .container{
-	margin-top: 50px;
-	max-width: 958px;
+	
+	max-width: 100%;
 	
 
 }
@@ -13,56 +14,45 @@ body, .blank{
 
 
 
-p{
-	color: #777777;
+#main-button{
+	height: 100px;
+	width: 250px;
+	background-color: #4aaaa5;
+	border: none;
 }
 
 
-h1{
-	font-size: 30px;
-	color: #4aaaa5;
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
+
+.main{
+	max-width: 75%;
+	margin: auto;
 }
 
-h2{
-	font-size: 25px;
-	color: #4aaaa5;
-	text-align: center;
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
+.container-sub{
+	max-width: 75%;
+	margin:auto;
 }
 
-.border-content{
-	border-color: #dddddd;
+.content{
+	padding: 25px;
+	background-color: #ffffff;
+	
+}
+
+.banner{
+	background-color: #ffffff;
+	align-items: center;
+}
+
+.drop{
+	margin-bottom: 50px;
+}
+
+.border-main{
 	border-style: solid;
+	border-color: #dddddd;
 	border-width: 2px;
 }
-
-.icon{
-	height: 50px;
-	margin-bottom: 10px;
-
-	
-}
-
-.background-main{
-	background-color: #ffffff;
-}
-
-img{
-	float: left;
-	display: inline-block;
-	margin-right: 10px;
-	
-}
-
-.navbar{
-	height: 100px;
-}
-
 
 footer{
 	background-color: #666666;
@@ -74,22 +64,19 @@ footer{
 	padding-top: 35px;
 	padding-bottom: 35px;
 	margin-top: 50px;
-	
-
-
-
-}
+	}
 
 h4{
-	font-size: 10px;
 	color: #ffffff;
 }
+	font-size: 10px;
 
-.col-sm-4{
-	align-items: center;
+img{
+	float: left;
+	padding-right: 15px;
 }
 
-.portfolio-item{
-
-	padding: 15px ;
+.portfolio{
+	margin-bottom: 20px;
+	padding-left: 25px;
 }
